--- a/mysite/polls/templates/polls/other.html
+++ b/mysite/polls/templates/polls/other.html
@@ -1,21 +1,17 @@
-{% comment %} {% load render_bundle from webpack_loader %} {% endcomment %}
 {% load static %}
 <!DOCTYPE html>
 <html>
  <head>
  <meta charset="UTF-8">
+
  <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}" />
  <link rel="stylesheet" type="text/css" href="{% static 'build/bundle.css' %}" />
+ 
  <title>Questions</title>
  </head>
 <body>
-  <h1>others page</h1>
- {% comment %} <div id="react"></div>
-  <script>
-    window.props = {{ props|safe }};
-    window.react_mount = document.getElementById('react');
-  </script>
-  {% render_bundle 'other' 'js' %} {% endcomment %}
+
+  <script>window.props = {{ props|safe }};</script>
   <script type="module" defer src="{% static 'build/other.js' %}"></script>
 
  </body>
