--- a/mysite/other/templates/other/other.html
+++ b/mysite/other/templates/other/other.html
@@ -4,10 +4,9 @@
  <head>
  <meta charset="UTF-8">
 
- <link rel="stylesheet" type="text/css" href="{% static 'global.css' %}" />
  <link rel="stylesheet" type="text/css" href="{% static 'build/bundle.css' %}" />
  
- <title>Questions</title>
+ <title>Other</title>
  </head>
 <body>
 
