--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,12 +1,12 @@
-{% comment %} {% load render_bundle from webpack_loader %} {% endcomment %}
-
+{% load static hash_static %}
 <!DOCTYPE html>
 <html>
- <head>
- <meta charset="UTF-8">
- <title>Example</title>
- </head>
- <body>
-    <h1>index page</h1>
- </body>
+   <head>
+      <meta charset="UTF-8">
+      {% hash_static 'build/bundle.css' %}
+      <title>Example</title>
+   </head>
+   <body>
+      <h1 class='underline text-2xl'>index page</h1>
+   </body>
 </html>
