--- a/mysite/polls/templates/polls/questions.html
+++ b/mysite/polls/templates/polls/questions.html
@@ -1,17 +1,18 @@
-{% load static load_bundle %}
+{% load static hash_static %}
 <!DOCTYPE html>
 <html>
- <head>
- <meta charset="UTF-8">
+  <head>
+    <meta charset="UTF-8">
 
- {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'build/bundle.css' %}" /> {% endcomment %}
- 
- <title>Questions</title>
- </head>
-<body>
-  <script>window.props = {{ props|safe }};</script>
+    {% hash_static 'build/bundle.css' %}
+    
+    <title>Questions</title>
+  </head>
+  <body>
 
-  <script type="module" defer src="{% load_bundle 'build/main.js' %}"></script>
+    <script>window.props = {{ props|safe }};</script>
 
- </body>
+    {% hash_static 'build/main.js' %}
+
+  </body>
 </html>
