--- a/mysite/sform/templates/sform/sform.html
+++ b/mysite/sform/templates/sform/sform.html
@@ -1,19 +1,18 @@
-{% load static load_bundle %}
+{% load static hash_static %}
 <!DOCTYPE html>
 <html>
- <head>
- <meta charset="UTF-8">
+  <head>
+      <meta charset="UTF-8">
 
- {% comment %} <link rel="stylesheet" type="text/css" href="{% static 'build/bundle.css' %}" /> {% endcomment %}
- 
- <title>Sform</title>
- </head>
-<body>
+      {% hash_static 'build/bundle.css' %}
+          
+      <title>Sform</title>
+  </head>
+  <body>
 
-  <script>window.props = {{ props|safe }};</script>
+    <script>window.props = {{ props|safe }};</script>
 
-  {% comment %} <script type="module" defer src="{% static 'build/sform.js' %}"></script> {% endcomment %}
-  <script type="module" defer src="{% load_bundle 'build/sform.js' %}"></script>
+    {% hash_static 'build/sform.js' %}
 
- </body>
+  </body>
 </html>
