--- a/mysite/polls/templates/polls/index.html
+++ b/mysite/polls/templates/polls/index.html
@@ -1,3 +1,4 @@
+{% load django_browser_reload %}
 {% load static hash_static %}
 <!DOCTYPE html>
 <html>
@@ -7,6 +8,6 @@
       <title>Example</title>
    </head>
    <body>
-      <h1 class='underline text-2xl'>index page</h1>
+      <h1 class='text-3xl mt-10'>index pages</h1>
    </body>
 </html>
