--- a/mysite/common/templates/common/base_django.html
+++ b/mysite/common/templates/common/base_django.html
@@ -12,7 +12,8 @@
 {% block body %}
 
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
-        
+
+        {% include "common/nav_bar.html" %}
         
         {% block body_content %}
         {% endblock %}
