--- a/mysite/common/templates/common/base_svelte.html
+++ b/mysite/common/templates/common/base_svelte.html
@@ -3,6 +3,8 @@
 {% block body %}
 
     <body>
+
+        {% include "common/nav_bar.html" %}
         
         {% block body_content %}
         {% endblock %}
