--- a/mysite/common/templates/common/base_django.html
+++ b/mysite/common/templates/common/base_django.html
@@ -19,6 +19,7 @@
         {% endblock %}
 
         <script src="https://unpkg.com/htmx.org@1.1.0"></script>
+        <script src="https://unpkg.com/hyperscript.org@0.9.7"></script>
         <script>
             document.body.addEventListener('htmx:configRequest', (event) => {
             event.detail.headers['X-CSRFToken'] = '{{ csrf_token }}';
