--- a/mysite/htmx_todo/templates/htmx_todo/partials/todo_list.html
+++ b/mysite/htmx_todo/templates/htmx_todo/partials/todo_list.html
@@ -14,7 +14,8 @@
             <div class="col-span-8 py-2 text-left pl-4">{{todo.item}}</div>
             <div class="col-span-1 py-2">
                 <input 
-                    type="checkbox" 
+                    type="checkbox"
+                    name="is_complete" 
                     {% if todo.complete %} checked {% endif %} 
                     hx-put="{% url 'todo' %}?id={{ todo.id }}&checked"
                 />
@@ -22,6 +23,7 @@
             <div 
                 class="col-span-1 py-2 text-grey text-stone-300 hover:text-red-400" 
                 hx-delete="{% url 'todo' %}?id={{ todo.id }}"
+                hx-target="#todos"
                 hx-confirm="Are you sure you want to delete this todo?">
                 <i class="fa-solid fa-trash"></i>
             </div>
