hyperscript app with a bunch of examples

--- a/mysite/common/templates/common/base_django.html
+++ b/mysite/common/templates/common/base_django.html
@@ -18,6 +18,9 @@
 
     <body hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'>
 
+        {% block pre-script-content %}
+        {% endblock %}
+
         {% include "common/nav_bar.html" %}
         
         <div class="mx-20">
