--- a/mysite/htmx_fragments/templates/htmx_fragments/partials/images.html
+++ b/mysite/htmx_fragments/templates/htmx_fragments/partials/images.html
@@ -1,4 +1,5 @@
 {% load crispy_forms_tags %}
+{% load imagekit %}
 
 <div id="img-form">
     <form 
@@ -11,13 +12,50 @@
         <input type="submit" value="Submit">
     </form>
 
-    {% if images %}
-        <div class="grid grid-cols-3 gap-1">
-            {% for img in images %}
-                <img class="w-32" src="{{ img.image.url }}" alt="{{img.title}}">
-            {% endfor %}
-        </div>
-    {% else %}
-        <p>There are no images.</p>
-    {% endif %}
+    <div id="img-section" class="w-full h-96">
+        {% if images %}
+            <div class="grid grid-cols-3 gap-1 relative">
+                {% for img in images %}
+                    <div
+                        _="on click 
+                            remove .hidden from #img-lg-{{img.pk}} then
+                            transition #img-lg-{{img.pk}}'s opacity from 0 to 1 over 300ms then
+                            wait 300ms then
+                            remove .hidden from .wait-to-show"
+                    >
+                        {% generateimage 'common:grid_image' source=img.image -- alt="{{img.title}}" class="border-4 border-white" %}
+                    </div>
+
+                    <div 
+                        id="img-lg-{{img.pk}}" 
+                        class="flex w-full h-96 hidden absolute opacity-0 bg-opacity-80 z-10 bg-black"
+                    >
+                        <span
+                            hx-get="{% url 'img-app-prev' img.pk %}"
+                            hx-swap="outerHTML" 
+                            hx-target="#img-lg-{{img.pk}}"
+                            _="on click from #img-box-{{img.pk}} "
+                            class="wait-to-show hidden my-auto ml-5 text-4xl font-bold text-white float-left"><</span>
+                        {% generateimage 'common:slide_image' source=img.image -- alt="{{img.title}}" class="m-auto" %}
+                        <span 
+                            hx-get="{% url 'img-app-next' img.pk %}"
+                            hx-swap="outerHTML" 
+                            hx-target="#img-lg-{{img.pk}}"
+                            class="wait-to-show hidden my-auto mr-5 text-4xl font-bold text-white float-right">></span>
+                        <span 
+                            class="wait-to-show hidden text-4xl font-bold text-white absolute right-0 mr-5 hover:cursor-pointer"
+                            _="on click 
+                                transition #img-lg-{{img.pk}}'s opacity from 1 to 0 over 300ms then
+                                add .hidden to .wait-to-show then
+                                add .hidden to #img-lg-{{img.pk}}"
+                        >x</span>
+                    </div>
+
+                {% endfor %}
+            </div>
+        {% else %}
+            <p>There are no images.</p>
+        {% endif %}
+
+    </div>
 </div>
