--- a/mysite/htmx_fragments/templates/htmx_fragments/partials/images.html
+++ b/mysite/htmx_fragments/templates/htmx_fragments/partials/images.html
@@ -9,7 +9,7 @@
         hx-encoding="multipart/form-data"
     >
         {{ form|crispy }}
-        <input type="submit" value="Submit">
+        <input type="submit" value="Submit" class="text-white px-5 py-3 text-lg bg-sky-800 hover:bg-slate-500">
     </form>
 
     <div id="img-section" class="w-full h-96 relative">
