--- a/mysite/common/templates/common/nav_bar.html
+++ b/mysite/common/templates/common/nav_bar.html
@@ -37,6 +37,9 @@
           <li>
             <a href="{% url 'htmx-fragments-index' %}" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">HX_Fragments</a>
           </li>
+          <li>
+            <a href="{% url 'chat' %}" class="block py-2 pr-4 pl-3 text-gray-700 rounded hover:bg-gray-100 md:hover:bg-transparent md:border-0 md:hover:text-blue-700 md:p-0 dark:text-gray-400 md:dark:hover:text-white dark:hover:bg-gray-700 dark:hover:text-white md:dark:hover:bg-transparent">Chat</a>
+          </li>
         </ul>
       </div>
     </div>
